2025-10-06 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: Reimplementing also method
    insert as named parameters requires an SQL statement to be
    evaluated where the array of key-value pairs lives.

2025-10-06 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: Preparing RC as 3.2.7 (which was correctly set on 2024-11-26)

2025-10-05 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/[dio|dio_Tdbc.tcl|formatters.c]: fix missing argument
	in field formatter call
	* rivet/packages/session/session-class.tcl: add debug output method to allow
	overriding of it

2025-10-03 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: restricting constructor action on the set of tdbc
	known drivers. Creating 'mariadb' and 'sqlite' aliases for mysql and sqlite3
	respectively. Adopting a specific tdbc connector creator form when creating a
	sqlite3 handle

2025-10-02 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio.tcl: definining command ::rivet::lempty if not present
	as it's extensively used but available only when running from mod_rivet (DIO
	package version number bumped to 1.2.1)

2025-08-19 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivet_types.h,src/parser/rivetParser.c: Introducting definition
	of Tcl_Size when TCL_MAJOR_VERSION == 8 in order to provide backward compatibility
	with Tcl 8 builds

2025-07-13 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: fixed error in variable name made impossible
	to actually pass TDBC specific options to a DBMS connector. Package version is
	bumped to 1.2.1

2025-05-05 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: Version 3.3.0. Merging tcl-novem into master after branching current
	Tcl8.6 only development to branch 3.2. Development continues on a Tcl9 ready master branch
	* rivet/packages/aida: reset development with the purpose of refactoring
	DIO and rebase the code on TclOO supporting only tdbc connectors
